--- a/andnext_app_whatsandroid/src/main/AndroidManifest.xml
+++ b/andnext_app_whatsandroid/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="com.haiyunshan.whatsandroid">
 
     <application
+            android:name=".WhatsApp"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
@@ -10,7 +11,6 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
-
         </activity>
         <activity android:name=".DemoActivity">
             <intent-filter>
@@ -20,6 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".DemoFragmentActivity">
+        </activity>
+        <activity android:name=".HelpActivity">
         </activity>
     </application>
 
