--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':andnext_app_whatsandroid', ':andnext_recyclerview', ':andnext_utils', ':andnext_dataset'
+include ':andnext_app_whatsandroid', ':andnext_recyclerview', ':andnext_utils', ':andnext_dataset', ':andnext_navigation', ':andnext_theme', ':andnext_marked'
