--- a/andnext_app_whatsandroid/src/main/AndroidManifest.xml
+++ b/andnext_app_whatsandroid/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+
         </activity>
         <activity android:name=".DemoActivity">
             <intent-filter>
@@ -22,6 +23,9 @@
         <activity android:name=".DemoFragmentActivity">
         </activity>
         <activity android:name=".HelpActivity">
+        </activity>
+        <activity android:name="com.haiyunshan.test.hierarchy.TestViewHierarchyActivity">
+
         </activity>
     </application>
 
