--- a/andnext_utils/build.gradle
+++ b/andnext_utils/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0-beta02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-beta02'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation files('libs/juniversalchardet-2.2.0.jar')
 }
