add new test data: meng bu jue.

--- a/andnext_app_whatsandroid/build.gradle
+++ b/andnext_app_whatsandroid/build.gradle
@@ -18,8 +18,8 @@ android {
         applicationId "com.haiyunshan.whatsandroid"
         minSdkVersion 22
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        versionCode 1001
+        versionName '1.0.1'
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
