add handwrite module
port hanzidict to android.
use it for chinese idiom games.

--- a/andnext_app_whatsandroid/build.gradle
+++ b/andnext_app_whatsandroid/build.gradle
@@ -65,4 +65,7 @@ dependencies {
     implementation project(':andnext_navigation')
     implementation project(':andnext_theme')
     implementation project(':andnext_marked')
+    implementation project(':andnext_handwrite')
+    implementation project(':andnext_java')
+    implementation project(':andnext_syntaxprettify')
 }
