fork EverythingMe/overscroll-decor
original overscroll-decor user support RecyclerView and ViewPager.
fork it and migrate to androidx.

--- a/andnext_overscroll/build.gradle
+++ b/andnext_overscroll/build.gradle
@@ -25,10 +25,11 @@ android {
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation 'androidx.appcompat:appcompat:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha3'
-    implementation project(':andnext_java')
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 }
