--- a/andnext_recyclerview/build.gradle
+++ b/andnext_recyclerview/build.gradle
@@ -31,5 +31,5 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0-beta02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-beta02'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'me.everything:overscroll-decor-android:1.0.4'
+    implementation project(':andnext_overscroll')
 }
