--- a/andnext_app_whatsnote/build.gradle
+++ b/andnext_app_whatsnote/build.gradle
@@ -35,7 +35,6 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0-beta02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-beta02'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'me.everything:overscroll-decor-android:1.0.4'
     implementation project(':andnext_dataset')
     implementation project(':andnext_recyclerview')
     implementation project(':andnext_utils')
@@ -44,4 +43,7 @@ dependencies {
     implementation project(':andnext_navigation')
     implementation project(':andnext_theme')
     implementation project(':andnext_marked')
+    implementation project(':andnext_overscroll')
+    implementation project(':andnext_syntaxprettify')
+    implementation project(':andnext_java')
 }
