--- a/andnext_app_whatsnote/build.gradle
+++ b/andnext_app_whatsnote/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation project(':andnext_navigation')
     implementation project(':andnext_theme')
-    implementation project(':andnext_marked')
+    implementation project(':andnext_markdown')
     implementation project(':andnext_overscroll')
     implementation project(':andnext_syntaxprettify')
     implementation project(':andnext_java')
