upgrade to online help

--- a/andnext_app_whatsnote/build.gradle
+++ b/andnext_app_whatsnote/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     implementation project(':andnext_overscroll')
     implementation project(':andnext_syntaxprettify')
     implementation project(':andnext_java')
+    implementation project(':andnext_widget')
 }
