--- a/andnext_app_whatsandroid/src/main/AndroidManifest.xml
+++ b/andnext_app_whatsandroid/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.haiyunshan.whatsandroid">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
             android:name=".WhatsApp"
             android:allowBackup="true"
@@ -21,8 +23,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".DemoFragmentActivity">
-        </activity>
-        <activity android:name=".HelpActivity">
         </activity>
         <activity android:name="com.haiyunshan.test.hierarchy.TestViewHierarchyActivity">
 
