RecyclerView add tree support
we wrap user object to tree node, so you don't need to change any code.
just add them to TreeList.

it's a low effective tree implementation. so maybe slow and memory lack when add too much data.

anyway, use it and improve it.

--- a/andnext_recyclerview/build.gradle
+++ b/andnext_recyclerview/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-beta02'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation project(':andnext_overscroll')
+    implementation project(':andnext_java')
 }
