--- a/andnext_app_whatsnote/src/main/AndroidManifest.xml
+++ b/andnext_app_whatsnote/src/main/AndroidManifest.xml
@@ -36,7 +36,6 @@
         <activity
                 android:name=".PreviewActivity"
                 android:label="预览">
-
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
@@ -47,24 +46,23 @@
                 <data android:scheme="file"/>
                 <data android:host="*"/>
                 <data android:mimeType="*/*"/>
-
             </intent-filter>
-
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT"/>
+
                 <action android:name="android.intent.action.SEND"/>
 
                 <data android:mimeType="*/*"/>
             </intent-filter>
-
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT"/>
+
                 <action android:name="android.intent.action.SEND_MULTIPLE"/>
 
                 <data android:mimeType="*/*"/>
             </intent-filter>
-
-
+        </activity>
+        <activity android:name=".FolderActivity">
         </activity>
     </application>
 
