test BitmapFactory.Options inBitmap

--- a/andnext_app_whatsandroid/src/main/AndroidManifest.xml
+++ b/andnext_app_whatsandroid/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
           package="com.haiyunshan.whatsandroid">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
             android:name=".WhatsApp"
@@ -13,17 +15,18 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
         <activity android:name=".DemoActivity">
         </activity>
         <activity android:name=".DemoFragmentActivity">
         </activity>
         <activity android:name="com.haiyunshan.test.hierarchy.TestViewHierarchyActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
         </activity>
         <activity android:name=".ProcessTextActivity"
                   android:label="文本处理">
