--- a/andnext_app_whatsandroid/src/main/AndroidManifest.xml
+++ b/andnext_app_whatsandroid/src/main/AndroidManifest.xml
@@ -14,6 +14,16 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <provider
+                android:name="androidx.core.content.FileProvider"
+                android:authorities="com.haiyunshan.whatsandroid.fileprovider"
+                android:exported="false"
+                android:grantUriPermissions="true">
+            <meta-data
+                    android:name="android.support.FILE_PROVIDER_PATHS"
+                    android:resource="@xml/file_paths" />
+        </provider>
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
